# liq-datasets

./: README.md  pyproject.toml
src/liq/datasets/: __init__.py  bundles.py  config.py  holdout.py  walk_forward.py  windowing.py
tests/: conftest.py  test_bundles.py  test_config.py  test_holdout.py  test_walkforward_splits.py  test_windowing.py
