[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liq-datasets"
version = "0.1.2"
description = "Dataset contracts and windowing utilities for the LIQ Stack"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Travis Risner", email = "firestrand@gmail.com" },
]
keywords = [
    "finance",
    "trading",
    "datasets",
    "windowing",
    "time-series",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "polars>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.14",
    "ty>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/firestrand/liq-datasets"
Repository = "https://github.com/firestrand/liq-datasets"

[tool.hatch.build.targets.wheel]
packages = ["src/liq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=liq.datasets --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/liq/datasets"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pass",
]

[tool.ty.environment]
extra-paths = ["./src"]

[tool.ty.rules]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["liq"]
